--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: guestbook-ui
+  annotations:
+    notifications.argoproj.io/subscribe.on-deployed.webhook-site: true
+    notifications.argoproj.io/subscribe.on-sync-failed.webhook-site: true
 spec:
   ports:
   - port: 80
